--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <header>
+    <header>            
         <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
+            <h3>Todos</h3>
         </div>
     </header>
     <main class="auth-main">
